--- a/super_ticket_package/pubspec.yaml
+++ b/super_ticket_package/pubspec.yaml
@@ -1,5 +1,5 @@
 name: super_ticket_package
-description: A new Flutter package project.
+description: The Super Ticket Package enhances Flutter app interfaces by providing a customizable and visually appealing solution for presenting event tickets. With dynamic features like color variations and sleek designs, developers can effortlessly elevate their UI, offering users an engaging and modern ticket viewing experience.
 version: 0.0.1
 homepage:
 
