--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: super_ticket_package
-description: The Super Ticket Package enhances Flutter app interfaces with customizable and visually appealing event ticket presentations, offering users an engaging and modern ticket viewing experience.
+description: Elevate your Flutter apps with the Super Ticket Package—customizable, visually stunning event tickets for a modern user experience!
 version: 0.0.3
 homepage: https://github.com/NurhayatYurtaslan/super_ticket_package
 documentation: https://github.com/NurhayatYurtaslan/super_ticket_package/blob/main/README.md
